tests/urmoac/input/wkt/errors/point_duplicate_id/sources.wkt
#id;pos;[var]
1000;POINT(-250 0)
1000;POINT(-20 0)
